# SeeWeDev

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeLists.txt.user.190641f  INSTALL.md  README-TH.md  README.md
.qtcreator/: CMakeLists.txt.user.52372c0
3rdpartyncnn/include/ncnn/: platform.h
3rdpartyncnn/lib/cmake/ncnn/: ncnn-release.cmake  ncnn.cmake  ncnnConfig.cmake  ncnnConfigVersion.cmake
3rdpartyncnn/lib/pkgconfig/: ncnn.pc
CVDev/: CMakeLists.txt  CVDev.desktop  CVDevPro.desktop  main.cpp
CVDevLibrary/: BoolData.h  BoolData.hpp  CMakeLists.txt  CVDevLibrary.hpp  CVImageData.hpp  CVImagePool.hpp  CVPointData.hpp  CVRectData.hpp  CVScalarData.h  CVScalarData.hpp  CVSizeData.hpp  ContourPointsData.hpp  CycloneDDSBridge.cpp  CycloneDDSBridge.hpp  CycloneDDSRawPayload.idl  CycloneDDSSettingsDialog.cpp  CycloneDDSSettingsDialog.hpp  DebugLogging.cpp  DebugLogging.hpp  DoubleData.hpp  FloatData.hpp  GroupCommands.cpp  GroupCommands.hpp  GroupLockCommand.cpp  GroupLockCommand.hpp  GroupPasteCommand.cpp  GroupPasteCommand.hpp  InformationData.cpp  InformationData.hpp  IntegerData.hpp  MainWindow.cpp  MainWindow.hpp  MainWindow.ui  MoveGroupCommand.cpp  MoveGroupCommand.hpp  NodeDataSerializer.cpp  NodeDataSerializer.hpp  PBAsyncDataModel.cpp  PBAsyncDataModel.hpp  PBAsyncQueue.hpp  (+51 more)
CVDevLibrary/resources/: cvdevlibrary_resources.qrc  resources.qrc
CVDevLibrary/resources/tango/: index.theme  tango.qrc  tango.rcc
Main/: CMakeLists.txt  CVDev.desktop  main.cpp
Main/resources/: cvdev_resources.qrc  cvdev_resources.rc
NodeEditor/: CMakeLists.txt
NodeEditor/include/nodes/internal/: DataModelRegistry.hpp  FlowScene.hpp  FlowView.hpp  Node.hpp  NodeDataModel.hpp  NodeGeometry.hpp  NodeGraphicsObject.hpp  NodeState.hpp
NodeEditor/resources/: resources.qrc
NodeEditor/src/: ConnectionGraphicsObject.cpp  FlowScene.cpp  FlowView.cpp  Node.cpp  NodeConnectionInteraction.cpp  NodeDataModel.cpp  NodeGeometry.cpp  NodeGraphicsObject.cpp  NodePainter.cpp  NodePainter.hpp  NodeState.cpp
Plugins/: CMakeLists.txt
Plugins/BasicNodes/: BasicNodePlugin.cpp  BasicNodePlugin.hpp  BasicNodes.pro  BitwiseOperationEmbeddedWidget.cpp  BitwiseOperationEmbeddedWidget.hpp  BitwiseOperationEmbeddedWidget.ui  BitwiseOperationModel.cpp  BitwiseOperationModel.hpp  BlendImagesEmbeddedWidget.cpp  BlendImagesEmbeddedWidget.hpp  BlendImagesEmbeddedWidget.ui  BlendImagesModel.cpp  BlendImagesModel.hpp  CMakeLists.txt  CVAdditionModel.cpp  CVAdditionModel.hpp  CVBilateralFilterModel.cpp  CVBilateralFilterModel.hpp  CVBitwiseOperationModel.cpp  CVBitwiseOperationModel.hpp  CVBlendImagesEmbeddedWidget.cpp  CVBlendImagesEmbeddedWidget.hpp  CVBlendImagesEmbeddedWidget.ui  CVBlendImagesModel.cpp  CVBlendImagesModel.hpp  CVCLAHEEqualizationModel.cpp  CVCLAHEEqualizationModel.hpp  CVCameraCalibrationEmbeddedWidget.cpp  CVCameraCalibrationEmbeddedWidget.hpp  CVCameraCalibrationEmbeddedWidget.ui  CVCameraCalibrationModel.cpp  CVCameraCalibrationModel.hpp  CVCameraEmbeddedWidget.cpp  CVCameraEmbeddedWidget.hpp  CVCameraEmbeddedWidget.ui  CVCameraModel.cpp  CVCameraModel.hpp  CVCannyEdgeModel.cpp  CVCannyEdgeModel.hpp  CVColorMapModel.cpp  (+294 more)
Plugins/BasicNodes/resources/: basic_resources.qrc
Plugins/Common/tools/: BoundedThreadSafeQueue.hpp  Config.hpp  Debug.hpp  ScopedTimer.hpp
Plugins/DNNNodes/: CMakeLists.txt  CVYoloDNNModel.cpp  CVYoloDNNModel.hpp  DNNNodePlugin.cpp  DNNNodePlugin.hpp  FaceDetectionDNNModel.cpp  FaceDetectionDNNModel.hpp  MNNDetectModel.cpp  MNNDetectModel.hpp  NCNNDetectModel.cpp  NCNNDetectModel.hpp  NecMLClassificationModel.cpp  NecMLClassificationModel.hpp  NomadMLClassificationModel.cpp  NomadMLClassificationModel.hpp  OnnxClassificationDNNModel.cpp  OnnxClassificationDNNModel.hpp  TextDetectionDNNModel.cpp  TextDetectionDNNModel.hpp  TextRecognitionDNNModel.cpp  TextRecognitionDNNModel.hpp
Plugins/DNNNodes/resources/: dnn_resources.qrc
Plugins/GUINodes/: ActivateAllNodesModel.cpp  ActivateAllNodesModel.hpp  CMakeLists.txt  DisplayTextModel.cpp  DisplayTextModel.hpp  DoubleSpinButtonModel.cpp  DoubleSpinButtonModel.hpp  FloatSpinButtonModel.cpp  FloatSpinButtonModel.hpp  GUINodePlugin.cpp  GUINodePlugin.hpp  IntSpinButtonModel.cpp  IntSpinButtonModel.hpp  LCDNumberModel.cpp  LCDNumberModel.hpp  PushButtonModel.cpp  PushButtonModel.hpp  RGBLedModel.cpp  RGBLedModel.hpp  TableViewModel.cpp  TableViewModel.hpp  ToggleButtonModel.cpp  ToggleButtonModel.hpp
Plugins/GUINodes/resources/: gui_resources.qrc
QtPropertyBrowserLibrary/: CMakeLists.txt  QtPropertyBrowserLibrary.hpp
QtPropertyBrowserLibrary/qtpropertybrowser/: migrate_qt.h  qtbuttonpropertybrowser.cpp  qtgroupboxpropertybrowser.cpp  qtpropertybrowser.cpp  qtpropertybrowser.h  qtpropertybrowserutils_p.h  qtpropertymanager.cpp  qttreepropertybrowser.h  qtvariantproperty.cpp
docs/: ASYNC_BASE_CLASS_GUIDE.md  ASYNC_WORKER_POOL_REFACTORING_GUIDE.md  DEBUG_LOGGING.md  IMPLEMENTATION_SUMMARY.md  MIGRATION_STATUS.md  NodeLifecycle.md  PROJECT_STRUCTURE.md  SLOT_CONNECTION_MIGRATION.md  THREADING_PATTERNS.md
qtpropertybrowser/: qtbuttonpropertybrowser.h  qteditorfactory.cpp  qteditorfactory.h  qtgroupboxpropertybrowser.h  qtpropertymanager.cpp  qtpropertymanager.h  qttreepropertybrowser.cpp  qtvariantproperty.cpp  qtvariantproperty.h
